--- a/_config.yml
+++ b/_config.yml
@@ -22,8 +22,8 @@ title: SpaceBlog
 email:
 description: >- # this means to ignore newlines until "baseurl:"
   A blog about space
-baseurl: "/spaceblog" # the subpath of your site, e.g. /blog
-url: "https://spaceblog.github.io" # the base hostname & protocol for your site, e.g. http://example.com
+baseurl: "" # the subpath of your site, e.g. /blog
+url: "" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username:
 github_username:  SpaceBlog
 
